# cm3070-image-video-nst

./: LICENSE  README.md  pyproject.toml  requirements.txt
configs/: phase2_outstanding_recovery.yaml  phase2_real_video_strict.yaml
data/manifests/: coco_pool_manifest_real.csv  wikiart_pool_manifest_real.csv
experiments/phase2_outstanding_recovery/: metrics_phase2_outstanding_recovery_summary.csv
experiments/phase2_real_video_strict/: real_video_reviewer_qa.csv  real_video_same_frame_audit_summary.csv  real_video_strict_clip_summary.csv  real_video_strict_summary.csv
reports/: model_comparison_table_phase2_round7_focus.csv
reports/cm3070_final/: main.tex  references.bib
reports/cm3070_final/assets/: asset_index.txt
scripts/: run_phase2_outstanding_recovery.py  run_phase2_real_video_strict.py
src/nst/: __init__.py  config.py  engine.py  io.py  losses.py  metrics.py  model.py  utils.py
