[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nst-rebuild"
version = "0.1.0"
description = "From-scratch Neural Style Transfer project for CM3015"
requires-python = ">=3.9"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]
